# deltaR

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  authors.md  index.html  index.md  justfile  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: 00_classes.R  delta_table.R  extendr-wrappers.R  merge.R  write.R
articles/: cloud-storage.html  cloud-storage.md  getting-started.html  getting-started.md  index.html  index.md  merge-operations.html  merge-operations.md
examples/: README.md  deltar_example.R  gcs_example.R  quickstart.R
man/: DeltaMergeBuilder.Rd  DeltaTable.Rd  compact.Rd  create_deltalake.Rd  delta_create.Rd  delta_merge.Rd  delta_merge_execute.Rd  delta_table.Rd  delta_table_open.Rd  delta_write.Rd  get_files.Rd  get_metadata.Rd  get_schema.Rd  history.Rd  is_delta_table.Rd  is_delta_table_path.Rd  load_datetime.Rd  load_version.Rd  merge_execute.Rd  partition_columns.Rd  register_cloud_handlers.Rd  table_version.Rd  vacuum.Rd  when_matched_delete.Rd  when_matched_update.Rd  when_matched_update_all.Rd  when_not_matched_by_source_delete.Rd  when_not_matched_by_source_update.Rd  when_not_matched_insert.Rd  when_not_matched_insert_all.Rd  write_deltalake.Rd
news/: index.html  index.md
reference/: DeltaMergeBuilder.html  DeltaMergeBuilder.md  DeltaTable.html  DeltaTable.md  compact.html  compact.md  create_deltalake.html  create_deltalake.md  delta_create.html  (+55 more)
src/rust/: Cargo.toml
src/rust/src/: lib.rs  merge.rs  write.rs
(+12 files in other folders)
